Bug 448029 - Spam false-positive, because KMail mis-parses some links
Summary: Spam false-positive, because KMail mis-parses some links
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-06 16:59 UTC by ratijas
Modified: 2022-01-07 06:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.19.2
Sentry Crash Report:


Attachments
Link looks alright in the message view (27.09 KB, image/png)
2022-01-06 16:59 UTC, ratijas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ratijas 2022-01-06 16:59:27 UTC
Created attachment 145166 [details]
Link looks alright in the message view

SUMMARY

KMail analyzed an email from Qt [interest] mailing list, found there a link (parsed it), mis-interpretted it, rendered as a link, and considered the whole email as a spam.

Link: https://bugreports.qt.io/issues/?jql=text%20~%20%22gadget%20qml%22

KMail's details on why it considered it as a scam:

> This email contains a link which reads as
> 'https://bugreports.qt.io/issues?jql=text ~ %22gadget qml'
> in the text, but actually points to
> 'https://bugreports.qt.io/issues?jql=text ~ %22gadget qml%22'.
> This is often the case in scam emails to mislead the recipient

Also, every time you click on a link, message view makes the scam "inline message" visible again. Like, you close it via the (X) «Close message» button, click on a link, and it re-appears again with an animation.

STEPS TO REPRODUCE
1. Get this email message https://lists.qt-project.org/pipermail/interest/2022-January/037848.html, and somehow open it via KMail

OBSERVED RESULT

Scam warning.

EXPECTED RESULT

No warnings.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Kernel Version: 5.15.12-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-6700HQ CPU @ 2.60GHz
Memory: 15.6 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 970M/PCIe/SSE2

ADDITIONAL INFORMATION
Comment 1 Laurent Montel 2022-01-06 18:48:34 UTC
I will investigate it soon.
Comment 2 Jonathan Marten 2022-01-06 21:11:07 UTC
Similar problem in bug 407086
Comment 3 Laurent Montel 2022-01-07 06:19:47 UTC
Git commit 229f211cee02196e7e878ecb2e9dfdd74b178fb4 by Laurent Montel.
Committed on 07/01/2022 at 06:18.
Pushed by mlaurent into branch 'release/21.12'.

Fix  Spam false-positive, because KMail mis-parses some links
FIXED-IN: 5.19.2

M  +5    -0    messageviewer/src/scamdetection/autotests/scamdetectionwebenginetest.cpp
M  +3    -0    messageviewer/src/scamdetection/scamdetectionwebengine.cpp

https://invent.kde.org/pim/messagelib/commit/229f211cee02196e7e878ecb2e9dfdd74b178fb4