Fix  Spam false-positive, because KMail mis-parses some links

BUG: 448029
FIXED-IN: 5.19.2